--- a/popup.html
+++ b/popup.html
@@ -8,19 +8,24 @@
 </style>
 
 <head>
-    <script type="text/javascript" src='js/popup.js'></script>
-    <script type="text/javascript" src='js/vendor/modernizr.js'></script>
+
     <link rel="stylesheet" type="text/css" href="css/foundation.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
 
-    <script src="js/vendor/modernizr.js"></script>
-    <script src="js/parse-1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="js/parse-1.4.2.min.js"></script>
 
 </head>
 
 <body>
     <div id="contentDiv"></div>
+
+    <script type="text/javascript" src="js/vendor/jquery.js"></script>
+    <script type="text/javascript" src="js/vendor/fastclick.js"></script>
+    <script type="text/javascript" src="js/foundation.min.js"></script>
+
+    <script type="text/javascript" src='js/popup.js'></script>
 </body>
 </html>
