Latest updates, pre first user test
Fashion turned on for multi-item search. Search more robust RE slow
page loads etc. Groceries turned on. Tested with more products
(Birdsong, Karma, Po Zu, Brothers We Stand)

--- a/userSubmittedRec.html
+++ b/userSubmittedRec.html
@@ -1,31 +1,27 @@
-<!doctype html>
-<html class="no-js" lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!DOCTYPE html>
 
-    <title>Balu</title>
+<head>
 
-    <script type="text/javascript" src='js/vendor/modernizr.js'></script>
     <link rel="stylesheet" type="text/css" href="css/foundation.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
 
-    <script src="js/vendor/modernizr.js"></script>
-    <script src="js/parse-1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="js/externalJS/parse-1.4.2.min.js"></script>
 
-  </head>
-  <body>
+    <title>Balu Settings</title>
+</head>
 
-    <div id="container">
-    </div>
+<body class="userSubmittedRecBody">
 
-    <script src="js/vendor/jquery.js"></script>
-    <script src="js/vendor/fastclick.js"></script>
-    <script src="js/foundation.min.js"></script>
+    <div id="contentDiv"></div>
 
-    <script src="js/userSubmittedRec.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>
+    <script type="text/javascript" src="js/externalJS/foundation.min.js"></script>
 
-  </body>
+    <script type="text/javascript" src='js/userSubmittedRec.js'></script>
+</body>
+
 </html>
