--- a/options.html
+++ b/options.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 
-
 <head>
-    <script type="text/javascript" src='js/options.js'></script>
-    <script type="text/javascript" src='js/vendor/modernizr.js'></script>
+
     <link rel="stylesheet" type="text/css" href="css/foundation.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
 
-    <script src="js/vendor/modernizr.js"></script>
-    <script src="js/parse-1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="js/externalJS/parse-1.4.2.min.js"></script>
 
     <title>Balu Settings</title>
 </head>
 
-<body style="padding-left:10px">
-    <div id="userFormDiv"></div>
+<body class="optionsBody">
 
-    <div id="settingsDiv"></div>
+    <div id="contentDiv"></div>
+
+    <script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>
+    <script type="text/javascript" src="js/externalJS/foundation.min.js"></script>
+
+    <script type="text/javascript" src='js/OP_main.js'></script>
 </body>
 
 </html>
