--- a/popup.html
+++ b/popup.html
@@ -1,11 +1,4 @@
 <!DOCTYPE html>
-<style type="text/css">
-    body {
-      min-width: 300px;
-      position: relative;
-      vertical-align: middle;
-    }
-</style>
 
 <head>
 
@@ -14,18 +7,21 @@
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
 
-    <script type="text/javascript" src="js/vendor/modernizr.js"></script>
-    <script type="text/javascript" src="js/parse-1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="js/externalJS/parse-1.4.2.min.js"></script>
 
+    <title>Balu Settings</title>
 </head>
 
-<body>
+<body class="popupBody">
+
     <div id="contentDiv"></div>
 
-    <script type="text/javascript" src="js/vendor/jquery.js"></script>
-    <script type="text/javascript" src="js/vendor/fastclick.js"></script>
-    <script type="text/javascript" src="js/foundation.min.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>
+    <script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>
+    <script type="text/javascript" src="js/externalJS/foundation.min.js"></script>
 
-    <script type="text/javascript" src='js/popup.js'></script>
+    <script type="text/javascript" src='js/BA_main.js'></script>
 </body>
+
 </html>
