QTip and Joyride
QTip and Joyride done, plus numerous other fixes and improvements.
Ready for second user test.

--- a/popup.html
+++ b/popup.html
@@ -17,9 +17,9 @@
 
     <div id="contentDiv"></div>
 
-    <script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>
-    <script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>
-    <script type="text/javascript" src="js/externalJS/foundation.min.js"></script>
+    <!--<script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/foundation.min.js"></script>-->
 
     <script type="text/javascript" src='js/BA_main.js'></script>
 </body>
