--- a/userBlockBrand.html
+++ b/userBlockBrand.html
@@ -7,25 +7,20 @@
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
 
-    <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
-    <script type="text/javascript" src="js/externalJS/parse-1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/cs_APIs.js"></script>
 
-    <title>Balu Settings</title>
+    <title>Block a Brand</title>
 </head>
 
-<body class="optionsBody">
+<body class="userBlockBrandBody">
 
-    <div id="settingsDiv"></div>
-
-    <div id="blockedBrandsDiv"></div>
-
-    <div id="websitesDiv"></div>
+    <div id="contentDiv"></div>
 
     <!--<script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>-->
     <!--<script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>-->
     <!--<script type="text/javascript" src="js/externalJS/foundation.min.js"></script>-->
 
-    <script type="text/javascript" src='js/OP_main.js'></script>
+    <script type="text/javascript" src='js/userBlockBrand.js'></script>
 </body>
 
 </html>
