--- a/userSubmittedRec.html
+++ b/userSubmittedRec.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
 
-    <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
-    <script type="text/javascript" src="js/externalJS/parse-1.4.2.min.js"></script>
+    <script type="text/javascript" src="js/cs_APIs.js"></script>
 
-    <title>Balu Settings</title>
+    <title>Share Ethical Brands and Products</title>
 </head>
 
 <body class="userSubmittedRecBody">
 
     <div id="contentDiv"></div>
 
-    <script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>
-    <script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>
-    <script type="text/javascript" src="js/externalJS/foundation.min.js"></script>
+    <!--<script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/foundation.min.js"></script>-->
 
     <script type="text/javascript" src='js/userSubmittedRec.js'></script>
 </body>
