--- a/options.html
+++ b/options.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
-
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
     <script type="text/javascript" src="js/externalJS/parse-1.6.14.min.js"></script>
 
@@ -15,16 +15,11 @@
 
 <body class="optionsBody">
 
-    <div id="settingsDiv"></div>
+    <div id="contentDiv"></div>
 
-    <div id="blockedBrandsDiv"></div>
-
-    <div id="websitesDiv"></div>
-
-    <!--<script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>-->
-    <!--<script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>-->
-    <!--<script type="text/javascript" src="js/externalJS/foundation.min.js"></script>-->
-
+    <script type="text/javascript" src="js/externalJS/jquery-2.1.4.min.js"></script>
+    <script src="/js/externalJS/vendor/fastclick.js"></script>
+    <script src="/js/externalJS/foundation.min.js"></script>
     <script type="text/javascript" src='js/OP_main.js'></script>
 </body>
 
