--- a/options.html
+++ b/options.html
@@ -2,12 +2,12 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="css/foundation.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
     <link href="http://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
-    <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="js/externalJS/modernizr.js"></script>
     <script type="text/javascript" src="js/externalJS/parse-1.6.14.min.js"></script>
 
     <title>Balu Settings</title>
@@ -18,7 +18,7 @@
     <div id="contentDiv"></div>
 
     <script type="text/javascript" src="js/externalJS/jquery-3.2.1.min.js"></script>
-    <script src="/js/externalJS/vendor/fastclick.js"></script>
+    <script src="/js/externalJS/fastclick.js"></script>
     <script src="/js/externalJS/foundation.min.js"></script>
     <script type="text/javascript" src='js/OP_main.js'></script>
 </body>
