--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,12 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="css/foundation.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
 
-    <script type="text/javascript" src="js/externalJS/vendor/modernizr.js"></script>
+    <script type="text/javascript" src="js/externalJS/modernizr.js"></script>
     <script type="text/javascript" src="js/externalJS/parse-1.6.14.min.js"></script>
 
     <title>Balu Settings</title>
@@ -17,8 +17,8 @@
 
     <div id="contentDiv"></div>
 
-    <!--<script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>-->
-    <!--<script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/jquery.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/fastclick.js"></script>-->
     <!--<script type="text/javascript" src="js/externalJS/foundation.min.js"></script>-->
 
     <script type="text/javascript" src='js/BA_main.js'></script>
