--- a/userBlockBrand.html
+++ b/userBlockBrand.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="css/foundation.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
@@ -16,8 +16,8 @@
 
     <div id="contentDiv"></div>
 
-    <!--<script type="text/javascript" src="js/externalJS/vendor/jquery.js"></script>-->
-    <!--<script type="text/javascript" src="js/externalJS/vendor/fastclick.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/jquery.js"></script>-->
+    <!--<script type="text/javascript" src="js/externalJS/fastclick.js"></script>-->
     <!--<script type="text/javascript" src="js/externalJS/foundation.min.js"></script>-->
 
     <script type="text/javascript" src='js/userBlockBrand.js'></script>
