--- a/userSubmittedWebsiteRec.html
+++ b/userSubmittedWebsiteRec.html
@@ -2,7 +2,7 @@
 
 <head>
 
-    <link rel="stylesheet" type="text/css" href="css/foundation.css">
+    <link rel="stylesheet" type="text/css" href="css/foundation.min.css">
     <link rel="stylesheet" type="text/css" href="css/app.css">
     <link rel="stylesheet" type="text/css" href="css/foundation-icons.css">
     <link rel="stylesheet" type="text/css" href="css/app-icons.css">
